fixed overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,10 +51,7 @@
     background-color: #e3dccc;
     border-color: #e3dccc;
 }
-.about-container {
-    overflow: auto;
-}
-.header {
+h3 {
     color: #033c5a;
     font-weight: bold;
 }
@@ -63,4 +60,16 @@
     text-align: center;
     font-family: "AvenirLT-Heavy",Helvetica,Arial,sans-serif;
     line-height: 1.28571em;
+}
+.left-div {
+    float: left;
+    width: 25%;
+    height: auto;
+    overflow: hidden;
+}
+.right-div {
+    float: right;
+    width: 25%;
+    height: auto;
+    overflow: hidden;
 }
